--- a/samba.config
+++ b/samba.config
@@ -15,6 +15,11 @@ if [ "$1" = "configure" ]; then
 		if [ -f /etc/samba/smb.conf ]; then
 			db_input medium samba/upgrade-from-v3 || true
 			db_go || true
+
+			# The realm can't be easily autodetected from the Samba 3
+			# settings.
+			db_input medium samba-common/realm || true
+			db_go || true
 		fi
 	fi
 
