--- a/rules
+++ b/rules
@@ -62,6 +62,7 @@ install: build
 	$(MAKE) -C $(SOURCEPATH) install DESTDIR=$(CURDIR)/debian/tmp
 	$(MAKE) -C $(SOURCEPATH) manpages installman DESTDIR=$(CURDIR)/debian/tmp
 	cp $(SOURCEPATH)/setup/{provision,upgrade,newuser} $(CURDIR)/debian/tmp/usr/lib/samba/setup
+	install -m 755 $(CURDIR)/source/bin/setntacl $(CURDIR)/debian/tmp/usr/bin
 	$(MAKE) -C $(SOURCEPATH)/pidl install DESTDIR=$(CURDIR)/debian/tmp
 	install -m 755 $(CURDIR)/debian/panic-action $(CURDIR)/debian/tmp/usr/share/samba
 	install -m 755 $(CURDIR)/debian/gdbcommands $(CURDIR)/debian/tmp/etc/samba
