Remove sonames from libnss_win{bind,s}.so.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@1001 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -160,13 +160,13 @@ install: build
 
 	# Install winbind stuff not installed by 'make install'
 	install -m 0644 source/nsswitch/libnss_winbind.so \
-		$(DESTDIR)/lib/libnss_winbind.so.2
+		$(DESTDIR)/lib/libnss_winbind.so
 	install -m 0644 source/nsswitch/pam_winbind.so \
 		$(DESTDIR)/lib/security/
 
 	# Install libnss_wins.so, which is not installed by 'make install' either.
 	install -m 0644 source/nsswitch/libnss_wins.so \
-		$(DESTDIR)/lib/libnss_wins.so.2
+		$(DESTDIR)/lib/libnss_wins.so
 
 	# pam_smbpass.so isn't being installed by 'make install'.
 	#	We'll move it here to $(DESTDIR)/lib/security/ and then
