Install smbumount setgid root to prevent changing mtab ownership.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@1006 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -293,7 +293,7 @@ ifeq ($(smbfs),yes)
 	#	a thorough security audit. smbmount _does not_ have to have
 	#	the setuid bit set. In fact, it is a security hole.
 	chmod u+s debian/smbfs/usr/bin/smbmnt
-	chmod u+s debian/smbfs/usr/bin/smbumount
+	chmod ug+s debian/smbfs/usr/bin/smbumount
 endif
 ifeq ($(mount_cifs),yes)
 	chmod u+s debian/smbfs/sbin/mount.cifs
