--- a/rules
+++ b/rules
@@ -33,7 +33,7 @@ else
   CFLAGS += -O2
 endif
 
-include /usr/share/quilt/quilt.make
+	include /usr/share/quilt/quilt.make
 
 DESTDIR=`pwd`/debian/tmp
 
@@ -56,6 +56,7 @@ conf_args = \
 		--with-pam_smbpass \
 		--with-libsmbclient \
 		--with-winbind \
+		--with-shared-modules=idmap_rid \
 		--with-msdfs \
 		--with-automount \
 		--with-tdbsam \
