Disable PIE compilation.
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@1016 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -42,6 +42,7 @@ conf_args = \
 		--with-fhs \
 		--enable-shared \
 		--enable-static \
+		--disable-pie \
 		--prefix=/usr \
 		--sysconfdir=/etc \
 		--libdir=/etc/samba \
