Activate building idmap_ad
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@1019 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/rules
+++ b/rules
@@ -57,7 +57,7 @@ conf_args = \
 		--with-pam_smbpass \
 		--with-libsmbclient \
 		--with-winbind \
-		--with-shared-modules=idmap_rid \
+		--with-shared-modules=idmap_rid,idmap_ad \
 		--with-msdfs \
 		--with-automount \
 		--with-tdbsam \
