commit changes to control.in, not just control
git-svn-id: svn://svn.debian.org/svn/pkg-samba/trunk@1020 fc4039ab-9d04-0410-8cac-899223bdd6b0

--- a/control.in
+++ b/control.in
@@ -169,8 +169,8 @@ Description: libsmbclient static libraries and headers
  This gives applications the ability to talk to Microsoft Windows servers
  and Unix servers running Samba.
  .
- This package contains the libsmbclient static libraries and headers
- needed to build applications that use SMB services.
+ This package contains libraries and headers needed to build applications
+ that use SMB services.
 
 Package: winbind
 Section: net
