--- a/rules
+++ b/rules
@@ -60,6 +60,7 @@ conf_args = \
 ifeq ($(DEB_HOST_ARCH_OS),linux)
   conf_args += \
 		--with-cifsmount \
+		--with-cifsspnego \
 		--with-acl-support \
 		--with-quotas
   mount_cifs	= yes
